changes till 22feb17

--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>DomoDSR</title>
-
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
-
+  <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" media="all">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body style="width: 100%; height: 100%;">
-  <app-root >Loading...</app-root>
+<body>
+  <app-root>Loading...</app-root>
 </body>
 </html>
